fix table alignment on rnages and tx in account

--- a/src/components/Trade/TradeTabs/Ranges/Ranges.module.css
+++ b/src/components/Trade/TradeTabs/Ranges/Ranges.module.css
@@ -152,18 +152,41 @@
     transition: background 0.5s ease-out;
 }
 
-.header li:nth-of-type(3),
-.header li:nth-of-type(4),
-.header li:nth-of-type(5),
-.header li:nth-of-type(6),
-.header li:nth-of-type(7) {
+.trade_header li:nth-of-type(3),
+.trade_header li:nth-of-type(4),
+.trade_header li:nth-of-type(5),
+.trade_header li:nth-of-type(6) {
     text-align: right;
 }
-
-.header li:nth-of-type(8) {
+.trade_header li:nth-of-type(7){
     text-align: center;
 }
 
+.trade_header li:nth-of-type(8) {
+    text-align: center;
+}
+
+.portfolio_header li:nth-of-type(4),
+.portfolio_header li:nth-of-type(5),
+.portfolio_header li:nth-of-type(6),
+.portfolio_header li:nth-of-type(7) {
+    text-align: right;
+}
+.portfolio_header li:nth-of-type(8){
+    text-align: center;
+}
+
+.portfolio_header li:nth-of-type(9) {
+    text-align: center;
+}
+.token_qty{
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    align-items: center;
+    gap: 4px;
+  }
+  
 /* .header li:nth-of-type(4){
     text-align: center;
     
