--- a/src/components/Trade/TradeTabs/Transactions/Transactions.module.css
+++ b/src/components/Trade/TradeTabs/Transactions/Transactions.module.css
@@ -204,16 +204,38 @@ text-transform: capitalize;
 .mono_font{
   font-family: monospace;
 }
-.header li:nth-of-type(1), .header li:nth-of-type(2){
+.trade_header li:nth-of-type(1), .trade_header li:nth-of-type(2){
   text-align: center;
 }
 
-.header li:nth-of-type(3), .header li:nth-of-type(6), .header li:nth-of-type(7){
+.trade_header li:nth-of-type(3), .trade_header li:nth-of-type(6), .trade_header li:nth-of-type(7){
   text-align: right;
  
 }
 
-.header li:nth-of-type(4){
+.trade_header li:nth-of-type(4){
   text-align: center;
   
 }
+
+
+
+
+
+
+.portfolio_header li:nth-of-type(2), .portfolio_header li:nth-of-type(3){
+  text-align: center;
+
+}
+
+.portfolio_header li:nth-of-type(4), .portfolio_header li:nth-of-type(7), .portfolio_header li:nth-of-type(8){
+  text-align: right;
+ 
+}
+
+.portfolio_header li:nth-of-type(5){
+  text-align: center;
+  
+}
+
+
